--- a/android/examples/PubnubSubscribe/res/layout/activity_pubnub.xml
+++ b/android/examples/PubnubSubscribe/res/layout/activity_pubnub.xml
@@ -4,9 +4,10 @@
   android:layout_width="fill_parent"  
   android:layout_height="fill_parent">  
     
-    <ListView android:layout_width="fill_parent"   
-      android:layout_height="fill_parent"   
-      android:id="@+id/message_list">  
+    <ListView
+        android:id="@+id/message_list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
     </ListView>  
       
 </LinearLayout>  
