--- a/android/examples/PubnubSubscribe/res/layout/activity_pubnub.xml
+++ b/android/examples/PubnubSubscribe/res/layout/activity_pubnub.xml
@@ -2,12 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
   android:orientation="vertical"  
   android:layout_width="fill_parent"  
-  android:layout_height="fill_parent">  
-    
+  android:layout_height="fill_parent">
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:maxHeight="@dimen/image_max_height"
+        android:maxWidth="@dimen/image_max_width"
+        android:src="@drawable/ic_launcher"
+        android:textAlignment="center" />
+
     <ListView
         android:id="@+id/message_list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-    </ListView>  
+        android:layout_height="fill_parent"
+        android:padding="@dimen/list_padding" >
+
+    </ListView>
+
+
       
 </LinearLayout>  
+
