--- a/android/examples/PubnubFilterDemo/res/layout/activity_main.xml
+++ b/android/examples/PubnubFilterDemo/res/layout/activity_main.xml
@@ -45,13 +45,6 @@
                     android:layout_weight="1"
                     android:ems="10" />
 
-                <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1"
-                   	android:layout_height="40dp"
-                    android:text=".pubnub.com" />
-
             </LinearLayout>
 
         </LinearLayout>
@@ -186,14 +179,16 @@
 
                 <EditText
                     android:id="@+id/textPublishMessage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
+                    android:layout_width="fill_parent"
+                    android:layout_weight="1"
+                    android:layout_height="fill_parent"
                     android:ems="10" />
 
                 <Button
                     android:id="@+id/buttonPublish"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="fill_parent"
+                    android:layout_weight="2"
+                    android:layout_height="fill_parent"
                     android:text="PUBLISH" />
 
             </LinearLayout>
